# distr_sys

./: CMakeLists.txt  README.MD  main.cpp
BinarySearch/: BinarySearch.cpp  BinarySearch.h
Exp/: Exp.cpp  Exp.h
MCS/: cpu_relax.cpp  cpu_relax.h  mcs_lock.cpp  mcs_lock.h
MSQueue/: MSQueue.h  Node.h
MutexQueue/: MutexQueue.h
PrefixSolver/: PrefixSolver.cpp  PrefixSolver.h
